# whdr

./: .gitignore  Cargo.toml  LICENSE  LICENSE-CC0  README.md  RELEASE.md  justfile
.github/workflows/: ci.yml  release.yml
clients/go/: backoff.go  backoff_test.go  conn.go  cursor.go  cursor_test.go  doc.go  errors.go  errors_test.go  frames.go  frames_test.go  go.mod  integration_test.go  protocol_test.go  resume.go  resume_test.go  run.go
clients/ocaml/: .ocamlformat  dune-project
clients/ocaml/lib/: backoff.ml  backoff.mli  client.ml  client.mli  connection.ml  connection.mli  cursor_store.ml  cursor_store.mli  dune  error.ml  error.mli  frame.ml  frame.mli  resume.ml  resume.mli
clients/ocaml/test/: dune  integration_tests.ml  protocol_tests.ml  test_whdr_sub_kit.ml  unit_tests.ml  ws_server.ml
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/src/whdr_sub_kit/: __init__.py  _backoff.py  _connection.py  _cursor.py  _errors.py  _frames.py  _subscriber.py
clients/python/tests/: _server.py  conftest.py  test_backoff.py  test_cursor.py  test_frames.py  test_integration.py  test_mock_server.py
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
clients/typescript/src/: backoff.ts  connection.ts  cursor.ts  errors.ts  frames.ts  index.ts  resume.ts  subscriber.ts
clients/typescript/test/integration/: harness.ts  server.test.ts
clients/typescript/test/unit/: backoff.test.ts  cursor.test.ts  frames.test.ts  protocol-order.test.ts  resume.test.ts  runloop.test.ts
clients/typescript/test/unit/support/: mock-server.ts
crates/whdr-cli/: Cargo.toml
crates/whdr-cli/src/: main.rs
crates/whdr-ext-dev/: Cargo.toml
crates/whdr-ext-dev/src/: lib.rs  main.rs
crates/whdr-ext-dev/tests/: dev.rs
crates/whdr-ext-kit/: Cargo.toml
crates/whdr-ext-kit/src/: lib.rs
crates/whdr-proto/: Cargo.toml
crates/whdr-proto/src/: channel.rs  lib.rs  messages.rs  ndjson.rs
crates/whdr-proto/tests/: proto.rs
crates/whdr-server/: Cargo.toml
crates/whdr-server/examples/: whdr-ext-fake.rs
crates/whdr-server/src/: channel_claims.rs  config.rs  control_plane.rs  daemon.rs  delivery_log.rs  dispatch_window.rs  extension_process.rs  extension_registration.rs  ingest.rs  lib.rs  main.rs  metrics.rs  outbound_queue.rs  subscriber_ws.rs  subscribers.rs  token_control.rs  token_store.rs
crates/whdr-server/tests/: config_tokens.rs  install_service.rs  routing.rs  system.rs
crates/whdr-sub-kit/: Cargo.toml
crates/whdr-sub-kit/src/: backoff.rs  connection.rs  cursor.rs  error.rs  frame.rs  lib.rs  resume.rs
crates/whdr-sub-kit/tests/: integration.rs
crates/whdr-test-support/: Cargo.toml
crates/whdr-test-support/src/: lib.rs
docs/: EXTENSIONS.md  OPERATIONS.md  PLAN.md  SPEC.md  SUBSCRIBERS.md  TUNNELS.md
examples/: cloudflared-whdr.yml  secrets.toml  whdr.toml
exts/whdr-ext-github/: Cargo.toml
exts/whdr-ext-github/src/: lib.rs  main.rs
exts/whdr-ext-github/tests/: github.rs
exts/whdr-ext-hmac/: Cargo.toml
exts/whdr-ext-hmac/src/: lib.rs  main.rs
exts/whdr-ext-hmac/tests/: hmac.rs
exts/whdr-ext-teams/: Cargo.toml
exts/whdr-ext-teams/src/: lib.rs  main.rs
exts/whdr-ext-teams/tests/: teams.rs
scripts/: install-service.sh
systemd/: whdr.service
