[project]
name = "whdr-sub-kit"
version = "0.1.0"
description = "Async Python client for the whdr subscriber plane (durable-delivery wire protocol v2)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "whdr" }]
keywords = ["whdr", "webhook", "websocket", "subscriber", "durable-delivery"]
dependencies = [
    "websockets>=13,<16",
]

[project.urls]
Homepage = "https://github.com/whdr/whdr"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whdr_sub_kit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/whdr_sub_kit"]
