[package]
name = "whdr-ext-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
whdr-ext-kit = { path = "../whdr-ext-kit", version = "0.1.0" }
whdr-proto = { path = "../whdr-proto", version = "0.1.0" }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[[bin]]
name = "whdr-ext-dev"
path = "src/main.rs"
