[package]
name = "whdr-ext-kit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
whdr-proto = { path = "../whdr-proto" }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
hmac.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
hex.workspace = true
