[package]
name = "whdr-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
whdr-proto = { path = "../whdr-proto", version = "0.1.0" }
anyhow.workspace = true
arc-swap.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
hex.workspace = true
http.workspace = true
hyper.workspace = true
libc.workspace = true
rand.workspace = true
redb.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
smallvec.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-tungstenite.workspace = true
whdr-test-support = { path = "../whdr-test-support" }

[[bin]]
name = "whdr-server"
path = "src/main.rs"
