[package]
name = "whdr-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
whdr-proto = { path = "../whdr-proto" }
anyhow.workspace = true
base64.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
