[package]
name = "whdr-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
whdr-proto = { path = "../whdr-proto", version = "0.1.0" }
anyhow.workspace = true
base64.workspace = true
serde_json.workspace = true
futures-util.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
