[package]
name = "whdr-ext-github"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
whdr-ext-kit = { path = "../../crates/whdr-ext-kit" }
whdr-proto = { path = "../../crates/whdr-proto" }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
hex.workspace = true
hmac.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true

[[bin]]
name = "whdr-ext-github"
path = "src/main.rs"
