[package]
name = "whdr-ext-teams"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
whdr-ext-kit = { path = "../../crates/whdr-ext-kit" }
whdr-proto = { path = "../../crates/whdr-proto" }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
serde_json.workspace = true
subtle.workspace = true
tokio.workspace = true
uuid.workspace = true

[[bin]]
name = "whdr-ext-teams"
path = "src/main.rs"
